--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ host/__pycache__/interactive_cli.cpython-312.pyc
 host/__pycache__/mcp_host_lmstudio.cpython-312.pyc
 host/__pycache__/mcp_host_ollama.cpython-312.pyc
 host/__pycache__/common.cpython-312.pyc
+host/mcp_gui.py
