--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ host/__pycache__/mcp_host_lmstudio.cpython-312.pyc
 host/__pycache__/mcp_host_ollama.cpython-312.pyc
 host/__pycache__/common.cpython-312.pyc
 host/mcp_gui.py
+host/__pycache__/common.cpython-313.pyc
