refactor: Unify treatment prompt output to include rating, color labels, and notes, and add a new "completo" prompt variant.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ host/__pycache__/mcp_host_ollama.cpython-312.pyc
 host/__pycache__/common.cpython-312.pyc
 host/mcp_gui.py
 host/__pycache__/common.cpython-313.pyc
+logs/batch-tratamento-20251208-115807.json
